--- a/ArtGalleryDrow/app/src/main/res/values/strings.xml
+++ b/ArtGalleryDrow/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="seller_open">Open</string>
+    <string name="seller_close">Close</string>
 </resources>
